<resources>
    <string name="app_name">Book Gazebo</string>
    <string name="login">เข้าสู่ระบบ</string>
    <string name="user">ชื่อผู้ใช้ :</string>
    <string name="password">รหัสผู้ใช้ :</string>
    <string name="new_register">สมัครสมาชิก</string>

    <string name="name">ชื่อ</string>
    <string name="box2_1">พระราชทานเพลงศพ</string>
    <string name="box2_2">ฌาปณกิจศพ</string>
    <string name="box2_3">สบง - ชุดกาแฟ(ชุดละ300บาท)</string>

    <string name="surname">นามสกุล</string>
    <string name="id_card">รหัสบัตรประชาชน</string>
    <string name="address">ที่อยู่</string>
    <string name="phone">เบอร์โทรศัพท์</string>
    <string name="save">บันทึก</string>
    <string name="title_HaveSpace">Have Space</string>
    <string name="message_HaveSpace">Please Fill All Every Blank</string>
    <string name="title_FalseIDcard">ID=Card False</string>
    <string name="messge_FalseIDcard">Plase Fill ID-Card 13 Digi</string>
    <string name="title_UserFalse">User False</string>
    <string name="message_UserFalse">No This User in my Database</string>
    <string name="title_PassFalse">Password False</string>
    <string name="message_PassFalse">Please Try Agains Password False</string>
    <string name="mode_one">รับศพและจัดงาน</string>
    <string name="mode_two">กำหนดการพระราชทานเพลิงศพ กำหนดการณาปนกิจศพ</string>

    <string name="mode_three">รายการทำบญ</string>
    <string name="wait_user">User Wait</string>
    <string name="wait_admin">Admin Wait</string>
    <string name="sent">Sent Data</string>

    <string name="detail_name">ชื่อ นามสกุล (ผู้ตาย)</string>
    <string name="detail_name2">ชื่อ นามสกุล (ศพฌาปนกิจ)</string>
    <string name="ordain">บวชหน้าไฟ</string>
    <string name="ordainedt">...รูป</string>
    <string name="ordain1">ไตรบวชเณร(ชุดละ600บาท)</string>
    <string name="MonkDetail">พระเทศน์ นิมนต์ 1 รูป(เช้าและบ่าย)</string>
    <string name="MonkDetail1">ไตรแบ่ง(ชุดละ500),ของแต่ละชุด600บาท</string>
    <string name="MonkDetail2">สวดมนต์ฉันเพล มาติกาบังสกุล</string>
    <string name="MonkDetail3">สบงช-ุดกาแฟ(ชุดละ300)</string>
    <string name="MonkDetail8">สบงช(ผืนละ๑๕๐)</string>
    <string name="MonkDetail4">ซักผ้าบังสุล(ทอดผ้าใคร)นิมนต์พระ</string>
    <string name="MonkDetail5">ไตรเต็ม(ชุดละ800บาท)</string>
    <string name="MonkDetail6">สวดหน้าไฟ บนเมรุ นิมนต์พระ4รูป</string>
    <string name="MonkDetail7">กาแฟ(ชุดละ150บาท)</string>
    <string name="crematorium">ค่าณาปนกิจสถาน3,300</string>
    <string name="Oil_burial">ค่าน้ำมันเผาศพ3,000</string>
    <string name="banana_stalk_pith">หยวก700</string>
    <string name="Cost_of_cremation">ค่าจัดสถานที่เผาศพ(กรณีนำศพมาจากที่อื่น)1,000</string>
    <string name="Funeral_car">รถรับศพ(เฉพราะเขตกรุงเทพฯและปริมณฑล)1,200</string>
    <string name="Flower">ดอกไม้จันทร์(100ช่อ/ห่อ ห่อละ400)</string>
    <string name="Flower1">ช่อประธาน(ช่อละ30)</string>
    <string name="Sound">เครื่องขยายเสียงหน้าเมรุ(ราคา300)</string>
    <string name="Sound1">พินพาทย์(ราคา5,000)</string>
    <string name="WaterCup">น้ำดื่มถ้วย(48ถ้วย/ลังละ140)</string>
    <string name="IceBag">น้ำแข็ง(ถุงละ70)</string>
    <string name="Food">อาหารถวายพระและเลี้ยงแขก</string>
    <string name="FoodNull">อาหารว่าง</string>
    <string name="Bowl">ยืมชุดถ้วยชาม(ราคา๓๐๐๐)</string>

    <string name="sala">ศาลา</string>
    <string name="sala_detail">ชื่อศาลา</string>
    <string name="sala_detail1">ศาลาตั้งศพ1วัน1คืน(ราคา3,000)</string>
    <string name="sala_detail2">ศาลาตั้งศพ1วัน(2,200)</string>

    <string name="rad1">เจ้าภาพนำศพมาส่ง</string>
    <string name="rad2">ทางวัดมารับศพ</string>

    <string name="time_work">เวลาในการตั้งสวด</string>
    <string name="time_work2">สวดอภิธรรม นิมนต์พระ 4 รูป</string>

    <string name="bodyform">ศพมาจาก</string>
    <string name="bodyform2">เชิญศพจาก</string>
    <string name="merits">การทำบุญ</string>
    <string name="church">โบสถ์</string>
    <string name="Temple">วิหารคด</string>
    <string name="museum">พิพิธภัณฑ์</string>

    <string name="sample_body">บ้าน หรือ โรงพยาบาล</string>
    <string name="dead_card">ใบมรณบัตร</string>
    <string name="watch_body">เวลารดน้ำศพ</string>
    <string name="burn_body">เวลาเผาศพ</string>
    <string name="pack_body">เวลาบรรจุศพ</string>
    <string name="move_body">เวลาในการย้ายศพ</string>
    <string name="series">ลำดับ</string>
    <string name="item">รายการ</string>
    <string name="price">ราคา</string>
    <string name="detail1">นิมนต์พระนำศพ</string>
    <string name="detail2">ศาลาตั้งศพ 1,2,3,4,5,6,7,8,9,11,12 (2200)</string>
    <string name="detail3">ศาลาตั้งศพ 10 (3,000)</string>
    <string name="detail4">ค่าสถานที่รับศพ (1,200)</string>
    <string name="detail5">รถรับศพ (เฉพราะเขตกรุงเทพ และ ปริมณฑล) (1,200)</string>
    <string name="box1">หีบศพ</string>
    <string name="box2">หีบรองสัก ขนาด 20 นิ้ว มีฐาน 8,500 บาท</string>
    <string name="box3">หีบมุข ขาว ดำ ทอง ขนาด 20 นิ้ว มีฐาน 8,000 บาท</string>
    <string name="box4">หีบไม้เนื้อแข็งเทพนม สีขาว ขนาด 20 นิ้ว มีฐาน 7,000 บาท</string>
    <string name="box5">หีบไม้เนื้อแข็งพิเศษ สีขาว ขนาด 20 นิ้ว มีฐาน 6,000 บาท</string>
    <string name="box6">บุผ้าด่วน</string>
    <string name="box7">ราคา</string>
    <string name="box8">อุปกรณ์ยาหีบ,ผ้าขาว,ด้ายดิบ</string>
    <string name="box9">ผ้าคลุมหีบ</string>

    <string name="flower1">จัดดอกไม้ หน้าศพ, หน้าพระ, กรอบรูป</string>
    <string name="waterThai1">น้ำอบไทย (ขวดละ 30 บาท)</string>
    <string name="thaitum">ของไทยธรรม ถวายพระ(4 ชุด ชุดละ 300 บาท)</string>
    <string name="detail6">น้ำดื่มถ้วย (48 ถ้วย/ลัง 150 บาท)</string>
    <string name="detail7">น้ำแข็ง (70)</string>
    <string name="detail8">น้ำแข็งบด (70)</string>
    <string name="detai19">รวมราคา :</string>
    
    <!--บังสุกุล-->
    <string name="Date">วันที่</string>
    <string name="Requiem">บังสุกุลที่เมรุ(แปรอิฐ)นิมนต์พระ๓รูป</string>
    <string name="Requiem1">ลุ้งผ้าขาว(ราคา๓๐๐)</string>
    <string name="Requiem2">ปิ่นโต๓เถา(เถาละ๓๕๐)</string>
    <string name="titi_upload">รับศพและจัดงาน บันทึกไปแล้ว</string>
    <string name="message_upload">คุณได้บันทึกไปแล้ว ไม่สามรถบันทึกได้อีก ให้รอ Confirm จากวัด</string>
    <string name="choose_sala">โปรดเลือก ศาลา </string>
    <string name="title_alert">โปรแลือกจำนวนที่ต้องการ</string>

    <string name="name_itblock">ชื่อศพหรืออิฐ</string>
    <string name="name_itblock02">.....................</string>
    <string name="name_lastname">ชื่อ-นามสกุล(ผู้ติดต่อ)</string>
    <string name="phone_p3">โทรศัพท์</string>
    <string name="Monk_Song">พระเทศน์</string>
    <string name="Sangkatan">ถวายสังฆทาน</string>
    <string name="Sangkatan02">.....................รูป</string>
    <string name="saud_mon">สวดมนต์(ฉันเช้า/เพล)</string>
    <string name="pack_bodyp3">บรรจุศพ(นิมนต์พระนำศพ 1รูป)</string>
    <string name="detailp3">ก้อนดินบรรจุ(ก้อนละ3บาท)</string>
    <string name="detailp31">ดอกไม้บรรจุช่อละ(10บาท)</string>
    <string name="detailp32">ดอกไม่บูชา3คู่(ราคา300บาท)หมายเหตุ:กรณีไม่มีศพในศาลา</string>
    <string name="detailp33">ไทยทานถวายพระ(ชุดละ300บาท)</string>
    <string name="detailp34">น้ำดื่มถ้วย(48ถ้วย/ลัง ลังละ140บาท)</string>
    <string name="detailp35">น้ำแข็ง(ถุงละ70บาท)</string>
    <string name="detailp36">อาหารถวายพระและเลี้ยงแขก</string>
    <string name="detailp37">ยืมชุดถวายชามราคา300บาท</string>

    <string name="rub">จำนวนรูป</string>


</resources>
