<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <!--Toolbar-->
    <LinearLayout
        android:id="@+id/linTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="@dimen/my_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/mode_one"
            android:textColor="@color/white"
            android:textSize="@dimen/h1"
            android:textStyle="bold" />

    </LinearLayout>

    <!--Unknow-->
    <LinearLayout
        android:id="@+id/linToolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linTop"
        android:background="@color/colorPrimaryLight"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/icon1"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_mode_two" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/mode_two"
                android:textColor="@color/white"
                android:textSize="@dimen/h2"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/icon1"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_mode_two" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/mode_three"
                android:textColor="@color/white"
                android:textSize="@dimen/h2"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <!--Content-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btnSentData"
        android:layout_below="@id/linTop"
        android:background="@color/colorPrimaryLight2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/my_padding">

            <!--Name-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="@dimen/h2"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/detail_name"
                android:inputType="text" />

            <!--เลือกศาลา-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sala"
                android:textSize="@dimen/h2"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spnPavilion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!--เลือกนำศพมาส่งหรือเปล่า-->
            <RadioGroup
                android:id="@+id/ragGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/my_padding">

                <RadioButton
                    android:id="@+id/rad0"
                    android:checked="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rad1" />

                <RadioButton
                    android:id="@+id/rad1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rad1" />

            </RadioGroup>

            <!--เลือกวันเวลา-->
            <LinearLayout
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="23/04/2017"
                    android:textSize="@dimen/h2"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="12:30"
                    android:textSize="@dimen/h2"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imvDateTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_calendar" />

            </LinearLayout>

            <!--เวลาในการตั้งสวด-->
            <TextView
                android:layout_marginTop="10dp"
                android:text="@string/time_work"
                android:textSize="@dimen/h2"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/spnTimeWork"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></Spinner>

            <!--ศพมาจาก-->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                
                <TextView
                    android:text="@string/bodyform"
                    android:textStyle="bold"
                    android:textSize="@dimen/h2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/edtBodyWhere"
                    android:layout_marginLeft="10dp"
                    android:hint="@string/sample_body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                
            </LinearLayout>

            <!--ใบมรณะ-->
            <CheckBox
                android:id="@+id/chbDeadCard"
                android:text="@string/dead_card"
                android:textSize="@dimen/h2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <!--รดน้ำศพ-->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/watch_body"
                    android:textStyle="bold"
                    android:textSize="@dimen/h2"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <Spinner
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"></Spinner>

            </LinearLayout>

            <!--เวลาที่บรรจุศพ-->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/pack_body"
                    android:textStyle="bold"
                    android:textSize="@dimen/h2"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="19.00"
                    android:textSize="@dimen/h2"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <!--เวลาที่เผาศพ-->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/burn_body"
                    android:textStyle="bold"
                    android:textSize="@dimen/h2"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <Spinner
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"></Spinner>

            </LinearLayout>

            <!--เวลาที่ย้ายศพ-->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/move_body"
                    android:textStyle="bold"
                    android:textSize="@dimen/h2"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="Test"
                    android:textSize="@dimen/h2"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnSentData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:text="@string/sent"
        android:textColor="@color/white"
        android:textSize="@dimen/h2"
        android:textStyle="bold" />


</RelativeLayout>