<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="@dimen/my_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/mode_two"
            android:textColor="@color/white"
            android:textSize="@dimen/h1"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimaryLight2"
        android:layout_below="@id/linTop"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout

            android:padding="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout

                android:padding="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <CheckBox

                android:layout_weight="1"
                android:text="@string/box2_1"
                android:textSize="18dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <CheckBox
                android:layout_weight="1"
                android:textSize="18dp"
                android:text="@string/box2_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            </LinearLayout>


            <TextView

                android:textStyle="bold"
                android:textSize="18dp"
                android:text="@string/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText

                android:text="@string/detail_name1"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>



    </ScrollView>

</RelativeLayout>